01-wordpress/01-wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress 
spec:
  type: NodePort
  ports:
  - port: 80 
    targetPort: 80
    nodePort: 30010
  selector:
    role: wordpress
