01-wordpress/01a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: w-service
spec:
  selector:
    role: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
