01-wordpress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: personal-website-service
spec:
  selector:
    role: wordpress
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
